--- a/A-Very-Bad-Modpack/mods/brb.pw.toml
+++ b/A-Very-Bad-Modpack/mods/brb.pw.toml
@@ -1,13 +1,13 @@
 name = "Better Recipe Book"
-filename = "brb-1.18.2-fabric-1.5.6.jar"
+filename = "brb-Fabric-1.5.6.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/vWIaVOTE/versions/1.5.6-2/brb-1.18.2-fabric-1.5.6.jar"
+url = "https://cdn.modrinth.com/data/vWIaVOTE/versions/1.5.6/brb-Fabric-1.5.6.jar"
 hash-format = "sha1"
-hash = "e480d8d552f46bc88dbe332a1fa6b02d61120e48"
+hash = "09f8622673de403a644471d6ede2febadb3aea9f"
 
 [update]
 [update.modrinth]
 mod-id = "vWIaVOTE"
-version = "f9dBgqlK"
+version = "sBHMavsZ"
