--- a/A-Very-Bad-Modpack/mods/terrestria.pw.toml
+++ b/A-Very-Bad-Modpack/mods/terrestria.pw.toml
@@ -1,13 +1,13 @@
 name = "Terrestria"
-filename = "terrestria-4.0.0-alpha.2.jar"
+filename = "terrestria-4.0.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/lsUDPMOT/versions/4.0.0-alpha.2/terrestria-4.0.0-alpha.2.jar"
+url = "https://cdn.modrinth.com/data/lsUDPMOT/versions/HbylQtUY/terrestria-4.0.2.jar"
 hash-format = "sha1"
-hash = "b11082bea1b5dffdb50f2e803d72a98081130f22"
+hash = "7c340239ce6f4289fc6e8b50492984200d1a43e8"
 
 [update]
 [update.modrinth]
 mod-id = "lsUDPMOT"
-version = "rQz7yTWD"
+version = "HbylQtUY"
